# campus-wave

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Justfile  LICENSE  README.md  configuration.py  pyproject.toml  requirements.txt  start.bat
.github/workflows/: build-binaries.yml  ci-binary.yml  ci-build.yml  ci-lint.yml  ci-tests.yml  ci-typecheck.yml  ci.yml  publish-to-pypi.yml
campus_wave/: configuration.py
controller/: html_formatter.py  model_controller.py
docker/: Dockerfile  entrypoint.sh
docs/: development.md  release.md
examples/: basic_usage.py
model/data_interface/: search_history.py  search_result.py  search_term.py
model/data_processing/: audio_processing.py  concept_mapping.py  data_filtering.py  data_indexing.py  information_extraction.py  keyword_ranking.py  part_of_speech_tagging.py  rdf_parser.py  similarity_computation.py  speech_recognition.py
server/: localserver.py
server/static/css/: customstyle.css
server/static/images/: logo_wave.psd
server/static/javascript/: customscript.js
server/static/model/: file_database_storage.json  frequent_searches_storage.json  relevant_bigram_terms_storage.json  relevant_terms_storage.json  search_history_storage.json  term_similarity_storage.json
server/static/model/search_index/: _campus_wave_1.toc
server/static/rdf/: fahrzeuge.rdf  kultur.rdf  laender.rdf  musik.rdf  politik.rdf  religion.rdf  sport.rdf  stadt.rdf  universitaet.rdf
server/templates/: base.html
server/templates/pages/: about_page.html  concept_edit_page.html  concept_overview_page.html  frequent_page.html  help_page.html  history_page.html  login_page.html  relevant_bigram_page.html  relevant_unigram_page.html  search_form_page.html  search_result_page.html  visualisation_page.html
server/templates/tables/: frequent_table.html  relevant_bigram_table.html  relevant_unigram_table.html  search_history_table.html  visualisation_table.html
tests/unit/: test_html_formatter.py
