[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "campus-wave"
version = "0.1.0"
description = "Ontology-based audio information retrieval system."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "flask>=2.0",
    "nltk>=3.8",
    "pocketsphinx>=5.0",
    "pydub>=0.25",
    "pyparsing>=3.0",
    "scikit-learn>=1.3",
    "spacy>=3.7",
    "tinytag>=1.8",
    "whoosh>=2.7",
]

[project.optional-dependencies]
dev = [
    "black>=24.8.0",
    "build>=1.2.2",
    "coverage[toml]>=7.6.0",
    "flake8>=7.1.1",
    "mypy>=1.11.2",
    "pre-commit>=4.0.1",
    "pyinstaller>=6.10.0",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.5",
    "twine>=5.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["campus_wave", "controller", "model", "server"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["campus_wave", "server", "controller", "model", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]
ignore = ["E203", "E501", "E402", "F401"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--verbose --strict-markers --tb=short --cov=campus_wave --cov=controller --cov=model --cov=server --cov-report=term-missing"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
exclude = [
    "tests",
]
